PN-2081 Gestione esiti puntuali da externalChannel